--- a/package.json
+++ b/package.json
@@ -10,17 +10,7 @@
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "lint": "eslint .",
-    "show:dist": "live-server dist",
-    "watch": "npm-watch"
-  },
-  "watch": {
-    "build": {
-      "patterns": [
-        "src"
-      ],
-      "extensions": "js"
-    }
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -28,32 +18,28 @@
     "@babel/preset-env": "^7.12.11",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.2.2",
+    "core-js": "^3.26.1",
     "css-loader": "^5.0.1",
     "eslint": "^7.17.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "file-loader": "^6.2.0",
-    "html-loader": "^1.3.2",
+    "handlebars": "^4.7.7",
+    "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "^4.5.1",
-    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^2.7.2",
-    "npm-watch": "^0.11.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss": "^8.4.20",
     "postcss-loader": "^7.0.2",
     "sass": "^1.57.0",
     "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-selector-bem-pattern": "^2.1.1",
+    "stylelint-webpack-plugin": "^3.3.0",
     "terser-webpack-plugin": "^5.0.3",
-    "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1",
+    "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.7.3"
-  },
-  "dependencies": {
-    "clsx": "^1.1.1",
-    "core-js": "^3.16.3",
-    "handlebars": "^4.7.7",
-    "handlebars-loader": "^1.7.3"
   }
 }
