--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,6 +7,7 @@
     "declaration-empty-line-before": [
       "never",
       {
+        "except": ["after-rule"],
         "ignore": ["after-declaration"]
       }
     ],
